[tool.poetry]
name = "opennem"
version = "3.8.1-alpha.0"
description = "OpenNEM Australian Energy Data Python Client"
authors = ["Nik Cubrilovic <nik@infotorch.org>", "Dylan McConnell <dylan.mcconnell@unimelb.edu.au>"]
license = "MIT"

readme = "README.md"

homepage = "https://developers.opennem.org.au"
repository = "https://github.com/opennem/opennempy"

keywords = ["opennem", "analysis", "energy", "data", "electricity", "australia"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries"
]

include = [
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
pydantic = "^1.10.2"
click = "^8.1.3"
python-dateutil = "^2.8.1"
python-dotenv = "^0.21.0"
PyYAML = "^6.0"
tomlkit = "^0.11.6"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.6.4"
pylint = "^2.15.5"
rope = "^1.4.0"
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
mypy = "^0.990"
pycodestyle = "^2.6.0"
pytest-sugar = "^0.9.4"
sphinx-autobuild = "^2021.3.14"
Sphinx = "^5.3.0"
watchdog = "^2.0.3"
sphinx-rtd-theme = "^1.1.1"
ruff = "^0.0.108"
myst-parser = "^0.18.1"

[tool.poetry.scripts]
opennem = 'opennem.cli:main'
[tool.ruff]
line-length = 130
exclude = [
  ".git",
  ".venv",
  "var",
  "scripts",
  "opennem/db/migrations",
  "build",
  "notebooks",
  "opennem/stubs",
  ".ipython",
  ".jupyter",
]

[tool.black]
line-length = 130
target_version = ['py311']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.jupyter
  |\.ipython
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
)/
'''

[tool.mypy]
python_version = "3.11"
plugins = "sqlmypy,pydantic.mypy"
ignore_missing_imports = true
disallow_untyped_defs = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 130

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
